Fix vcard cut and paste error
The text for forwarding URL appears to have been pasted over the vcard download URL

--- a/public_html/lists/admin/locale/en/phplist.po
+++ b/public_html/lists/admin/locale/en/phplist.po
@@ -8282,7 +8282,7 @@ msgstr "URL for forwarding messages"
 #: public_html/lists/admin/defaultconfig.php:358
 #, fuzzy
 msgid "URL for downloading vcf card"
-msgstr "URL for forwarding messages"
+msgstr "URL for downloading vcf card"
 
 #: public_html/lists/admin/defaultconfig.php:365
 msgid ""
